--- a/Home_files/Home.css
+++ b/Home_files/Home.css
@@ -1,53 +1,23 @@
-.style.vertical-align-middle-innerbox {
+.style {
     padding: 4px;
-}
-.style_1 {
-    padding: 4px;
-}
-.style_2 {
-    padding: 4px;
-}
-.style_SkipStroke_2 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_3 {
-    background: transparent url(backgroundimage_1_1.png) no-repeat scroll center center;
-    opacity: 1.00;
 }
 .style_SkipStroke {
     background: transparent;
     opacity: 1.00;
 }
-.style_SkipStroke_1 {
-    background: transparent url(tile_waterclr_pk_med100.jpg) repeat scroll top left;
-    opacity: 1.00;
-}
-.style_SkipStroke_4 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_External_620_63.vertical-align-middle-middlebox {
-    height: 63px;
-    position: relative;
-    width: 620px;
-}
-.style_External_620_63_1 {
-    position: relative;
-}
-.style_External_700_600 {
+.style_External_630_50 {
     position: relative;
 }
 .Header {
-    color: rgb(192, 39, 119);
-    font-family: 'HoeflerText-Regular', 'Hoefler Text', 'Times New Roman', serif;
-    font-size: 46px;
+    color: rgb(167, 167, 167);
+    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
+    font-size: 36px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 55px;
+    line-height: 42px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -55,82 +25,35 @@
     opacity: 1.00;
     padding-bottom: 0px;
     padding-top: 0px;
-    text-align: left;
+    text-align: center;
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
+}
+.Normal_External_630_50 {
+    position: relative;
 }
 .Normal {
     padding: 4px;
 }
-.Normal_External_620_63 {
-    position: relative;
-}
-.Title {
-    color: rgb(192, 39, 119);
-    font-family: 'HoeflerText-Regular', 'Hoefler Text', 'Times New Roman', serif;
-    font-size: 22px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 26px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
 .graphic_generic_header_textbox_style_default_SkipStroke {
     background: transparent;
-    opacity: 1.00;
-}
-.graphic_generic_title_textbox_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_image_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_shape_layout_style_default {
-    padding: 4px;
-}
-.graphic_shape_layout_style_default_External_700_16 {
-    position: relative;
-}
-.graphic_shape_layout_style_default_External_700_600 {
-    position: relative;
-}
-.graphic_shape_style_default_SkipStroke {
-    background: rgb(255, 178, 209);
     opacity: 1.00;
 }
 .bumper {
     font-size: 1px;
     line-height: 1px;
 }
-.tinyText {
-    font-size: 1px;
-    line-height: 1px;
-}
 #widget0 a:hover {
-    color: rgb(192, 39, 119);
+    color: rgb(0, 0, 0);
     text-decoration: underline;
 }
 #widget0 a:visited {
-    color: rgb(112, 107, 84);
+    color: rgb(121, 121, 121);
     text-decoration: underline;
 }
 #widget0 a {
-    color: rgb(135, 47, 165);
+    color: rgb(88, 77, 77);
     text-decoration: underline;
 }
 .spacer {
